# 1337x

./: README.md  parse_junit.py  pyproject.toml  requirements.txt  slack_notify_test.py  x1337.py
.github/scripts/: sample_workflow_run_success.json  slack_payload.py
.github/tests/: smoke.txt
.github/workflows/: ci.yml  slack-deploy-notify.yml
ci-artifacts-17191931415/: results-3.10.xml  results-3.11.xml
ci-artifacts-17192060019/: results-3.10.xml  results-3.11.xml
tests/: test_x1337.py
x1337.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
